Fix stack badges deforming on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -337,6 +337,7 @@ footer{
 
 .stack-section {
   display: flex;
+  flex-wrap: wrap;
   gap: 30px;
 }
 
